--- a/ProiectIS-ejb/nbproject/project.properties
+++ b/ProiectIS-ejb/nbproject/project.properties
@@ -34,10 +34,12 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=ProiectIS-ejb.jar
+jars.in.ejbjar=false
 javac.classpath=
 javac.debug=true
 javac.deprecation=false
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
