add gulp workflow and stylus

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /ProiectIS-ejb/nbproject/private/
 /ProiectIS-war/nbproject/private/
 /nbproject/private/
+/ProiectIS-war/web/Static/node_modules/
+/ProiectIS-war/web/Static/node_modules
