--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-
+spring.profiles.active=dev
+#JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=default
+spring.jpa.show-sql=true
+#    spring.datasource.driver-class-name=org.apache.derby.jdbc.InternalDriver
 spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
     spring.datasource.url=jdbc:derby://localhost:1527/pos
     spring.datasource.username=root
