--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=default
 spring.jpa.show-sql=true
 #    spring.datasource.driver-class-name=org.apache.derby.jdbc.InternalDriver
-spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
-    spring.datasource.url=jdbc:derby://localhost:1527/pos
-    spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+    spring.datasource.url=jdbc:mysql://localhost:3306/pos
+    spring.datasource.username=user
     spring.datasource.password=1234
