--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,19 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
     spring.datasource.url=jdbc:mysql://localhost:3306/pos
     spring.datasource.username=user
     spring.datasource.password=1234
+
+
+# ==============================================================
+# = The SQL dialect makes Hibernate generate better SQL for the chosen database
+# ==============================================================
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.seller-query=select first_name, password,is_admin from seller where first_name=?
+
+# ==============================================================
+# = Initialize the database using data.sql script
+# ==============================================================
+spring.datasource.initialization-mode=always
