Posibility of login and logout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
-spring.queries.seller-query=select first_name, password,is_admin from seller where first_name=?
+spring.queries.seller-query=select username, password, active from seller where username=?
+spring.queries.roles-query=select s.username, r.role from seller s inner join seller_role sr on(s.seller_id=sr.seller_id) inner join role r on(sr.role_id=r.role_id) where s.username=?
+
 
 # ==============================================================
 # = Initialize the database using data.sql script
