Static Resources now accesible via path. Maximum upload size 1MB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,8 @@ spring.queries.roles-query=select s.username, r.role from seller s inner join se
 # ==============================================================
 spring.datasource.initialization-mode=always
 
+# ==============================================================
+# = Multipart File size
+# ==============================================================
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
