--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 ### STUFF TO IGNORE ###
 
 # exclude everything but keep folder
-src/main/resources/static/media/*
-!src/main/resources/static/media/.gitkeep
+media/*
+
 
 ### STS ###
 .apt_generated
