--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,36 @@
 spring.profiles.active=dev
 #JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=default
-spring.jpa.show-sql=true
-#    spring.datasource.driver-class-name=org.apache.derby.jdbc.InternalDriver
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.generate-ddl=true
+
+
+# ==============================================================
+# = JPA CONFIGURATION
+# ==============================================================
+
+    spring.jpa.hibernate.ddl-auto=none
+#    spring.jpa.database=default
+    spring.jpa.show-sql=true
+    #    spring.datasource.driver-class-name=org.apache.derby.jdbc.InternalDriver
+
+    # ==============================================================
+    # = The SQL dialect makes Hibernate generate better SQL for the chosen database
+    # ==============================================================
+    spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+    # ==============================================================
+    # = Database settings
+    # ==============================================================
+    spring.datasource.driver-class-name=com.mysql.jdbc.Driver
     spring.datasource.url=jdbc:mysql://localhost:3306/pos
     spring.datasource.username=user
     spring.datasource.password=1234
 
 
 # ==============================================================
-# = The SQL dialect makes Hibernate generate better SQL for the chosen database
-# ==============================================================
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-# ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
 spring.queries.seller-query=select username, password, active from seller where username=?
-spring.queries.roles-query=select s.username, r.role from seller s inner join seller_role sr on(s.seller_id=sr.seller_id) inner join role r on(sr.role_id=r.role_id) where s.username=?
+spring.queries.roles-query=select s.username, r.role from seller s inner join seller_role sr on(s.id=sr.seller_id) inner join role r on(sr.role_id=r.id) where s.username=?
 
 
 # ==============================================================
@@ -33,3 +43,9 @@ spring.datasource.initialization-mode=always
 # ==============================================================
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
+
+# ==============================================================
+# = Liquibase settings
+# ==============================================================
+#spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/liquibase-changeLog.xml
