--- a/pom.xml
+++ b/pom.xml
@@ -27,21 +27,20 @@
 
     <dependencies>
 
+
+        <!--#############################-->
+        <!-- LIQUIBASE -->
+        <!--#############################-->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-maven-plugin</artifactId>
             <version>3.4.1</version>
         </dependency>
-
-
-        <!--#############################-->
-        <!-- LIQUIBASE -->
-        <!--#############################-->
-        <!--<dependency>-->
-            <!--<groupId>org.liquibase</groupId>-->
-            <!--<artifactId>liquibase-core</artifactId>-->
-        <!--</dependency>-->
-
 
 
         <!--#############################-->
@@ -86,8 +85,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
-
 
 
         <dependency>
